add jira comment function
